# askdb

./: LICENSE  README.md  connections_template.json  pyproject.toml
src/: askdb.py  cli.py  database.py  llm.py  utils.py
src/askdb/: cli.py  llm.py  main.py  utils.py
src/askdb/prompts/: general.txt  mysql.txt  postgresql.txt  result.txt  sqlite.txt
