[build-system]
requires = ["setuptools"]
build-backend = "setuptools.build_meta"

[project]
name = "AskDB"
description = "Universal Q&A database tool"
version = "0.1"
requires-python = ">= 3.10"
readme = "README.md"

authors = [
  {name = "Marco Lardera", email = "larderamarco@hotmail.com"}
  ]

dependencies = [
    "openai",
    "SQLAlchemy>=2",
    "psycopg2-binary",
    "PyMySQL",
    "click",
    "nicegui>=1.4.17",
    "xdg-base-dirs"
    ]

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
askdb = ["prompts/*"]

[project.scripts]
askdb = "askdb.main:main"
askdb-cli = "askdb.cli:main"